Fix Electricity Query Fix Memory Leak

--- a/DLUTToolBoxV3/Properties/Resources.resx
+++ b/DLUTToolBoxV3/Properties/Resources.resx
@@ -117,6 +117,163 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Eleget" xml:space="preserve">
+    <value>$("#factorycode").val('E001');
+    $("#xqh").val('03');
+    var url = "/business/queryEleInfoByIdserial";
+    var param = new Object();
+    param.idserial = $("#idserial").val();
+    param.xqh = $("#xqh").val();
+    dkyw.request.post(url, param, function (data) {
+      if (data &amp;&amp; data.success) {
+        var resultData = data.resultData;
+        if (dkywcommon.isEmpty(resultData.jzwbh)) {} else if (dkywcommon.isEmpty(resultData.fjlc)) {} else if (dkywcommon.isEmpty(resultData.fjmc)) {
+
+        } else {
+          if (resultData.xqh == '01') {
+            $("#factorycode").find("option[value='E002']").prop("selected", true);
+          } else if (resultData.xqh == '03') {
+            $("#factorycode").find("option[value='E001']").prop("selected", true);
+          } else if (resultData.xqh == '02') {
+            $("#factorycode").find("option[value='E003']").prop("selected", true);
+          } else {
+            return;
+          }
+
+          var factorycode = $("#factorycode").val();
+          var eleinfo = new Object();
+          eleinfo.buildingid = resultData.loudongid;
+          eleinfo.floorid = resultData.fjlc;
+          eleinfo.roomid = resultData.roomid; //房间ID
+          eleinfo.roomname = resultData.fjmc; //房间名称
+          if (resultData.xqh == "02") { //盘锦校区存在房间或者客厅用户自选
+            eleinfo.livingid = resultData.livingid;
+          }
+          if (factorycode != 'E002') {
+            $("#floorid").parent().hide();
+          }
+          //获取该证件号对应的房间余额
+          send(eleinfo);
+        }
+      } else {
+        $("#factorycode").val('E002');
+        $("#xqh").val('01');
+        var url = "/business/queryEleInfoByIdserial";
+        var param = new Object();
+        param.idserial = $("#idserial").val();
+        param.xqh = $("#xqh").val();
+        dkyw.request.post(url, param, function (data) {
+          if (data &amp;&amp; data.success) {
+            var resultData = data.resultData;
+            if (dkywcommon.isEmpty(resultData.jzwbh)) {
+
+            } else if (dkywcommon.isEmpty(resultData.fjlc)) {
+
+            } else if (dkywcommon.isEmpty(resultData.fjmc)) {
+
+            } else {
+              if (resultData.xqh == '01') {
+                $("#factorycode").find("option[value='E002']").prop("selected", true);
+              } else if (resultData.xqh == '03') {
+                $("#factorycode").find("option[value='E001']").prop("selected", true);
+              } else if (resultData.xqh == '02') {
+                $("#factorycode").find("option[value='E003']").prop("selected", true);
+              } else {
+                return;
+              }
+
+              var factorycode = $("#factorycode").val();
+              var eleinfo = new Object();
+              eleinfo.buildingid = resultData.loudongid;
+              eleinfo.floorid = resultData.fjlc;
+              eleinfo.roomid = resultData.roomid; //房间ID
+              eleinfo.roomname = resultData.fjmc; //房间名称
+              if (resultData.xqh == "02") { //盘锦校区存在房间或者客厅用户自选
+                eleinfo.livingid = resultData.livingid;
+              }
+              if (factorycode != 'E002') {
+                $("#floorid").parent().hide();
+              }
+              //获取该证件号对应的房间余额
+              send(eleinfo);
+            }
+          } else {
+            $("#factorycode").val('E003');
+            $("#xqh").val('02');
+            var url = "/business/queryEleInfoByIdserial";
+            var param = new Object();
+            param.idserial = $("#idserial").val();
+            param.xqh = $("#xqh").val();
+            dkyw.request.post(url, param, function (data) {
+              if (data &amp;&amp; data.success) {
+                var resultData = data.resultData;
+                if (dkywcommon.isEmpty(resultData.jzwbh)) {
+
+                } else if (dkywcommon.isEmpty(resultData.fjlc)) {
+
+                } else if (dkywcommon.isEmpty(resultData.fjmc)) {
+
+                } else {
+                  if (resultData.xqh == '01') {
+                    $("#factorycode").find("option[value='E002']").prop("selected", true);
+                  } else if (resultData.xqh == '03') {
+                    $("#factorycode").find("option[value='E001']").prop("selected", true);
+                  } else if (resultData.xqh == '02') {
+                    $("#factorycode").find("option[value='E003']").prop("selected", true);
+                  } else {
+                    return;
+                  }
+
+                  var factorycode = $("#factorycode").val();
+                  var eleinfo = new Object();
+                  eleinfo.buildingid = resultData.loudongid;
+                  eleinfo.floorid = resultData.fjlc;
+                  eleinfo.roomid = resultData.roomid; //房间ID
+                  eleinfo.roomname = resultData.fjmc; //房间名称
+                  if (resultData.xqh == "02") { //盘锦校区存在房间或者客厅用户自选
+                    eleinfo.livingid = resultData.livingid;
+                  }
+                  if (factorycode != 'E002') {
+                    $("#floorid").parent().hide();
+                  }
+                  //获取该证件号对应的房间余额
+                  send(eleinfo);
+                }
+              } else {}
+            });
+          }
+        });
+      }
+    });</value>
+  </data>
+  <data name="Send" xml:space="preserve">
+    <value>function send(eleinfo) {
+    var url = "/business/queryResEleByIdserial";
+    var param = new Object();
+    param.idserial = $("#idserial").val();
+    param.xqh = $("#xqh").val();
+    dkyw.request.post(url, param, function(data){
+        if(data&amp;&amp;data.success){
+            var data1 = data.resultData;
+            if ("E001" == $("#factorycode").val() || "E002" == $("#factorycode").val()) {
+                $("#roombalance").val(dkywcommon.fenToYuan(dkywcommon.yuanToFen(data1.sydl)));
+				window.chrome.webview.postMessage('寝室电费：'+dkywcommon.fenToYuan(dkywcommon.yuanToFen(data1.sydl)));
+            }else if ("E003" == $("#factorycode").val()){
+                var syld=data1.sydl;
+                var sylds=syld.split("/");
+                var room =sylds[0];
+                var living=sylds[1];
+                $("#roombalance").val("房间："+parseInt(room)+"，客厅："+parseInt(living));
+				window.chrome.webview.postMessage('寝室电费：'+"房间："+parseInt(room)+"，客厅："+parseInt(living));
+            }
+        }else{
+            $("#roombalance").val("");
+            mh_dialogShow('mh_warning', queryI18n(data.message), 3, true);
+        }
+        queryBuildingList(eleinfo);
+    });
+}</value>
+  </data>
   <data name="StrAdd" xml:space="preserve">
     <value>document.getElementsByClassName('nav-bar-menu')[0].innerHTML += "&lt;li&gt;&lt;a id='a4' class='' onclick=\"window.chrome.webview.postMessage('changegroup')\"&gt;&lt;i class='fa fa-fw fa-cog'&gt;&lt;/i&gt;结转周期&lt;/a&gt;&lt;/li&gt;"</value>
   </data>
